general transformer working with some parameters
Former-commit-id: aa02f019d19612ac60d53f8d1d8eeb5f6420732b